--- a/package.json
+++ b/package.json
@@ -14,26 +14,26 @@
   "license": "ISC",
   "dependencies": {
     "connect-flash": "^0.1.1",
-    "connect-mongodb-session": "^2.4.1",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.5",
+    "connect-mongodb-session": "^5.0.0",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "electron-squirrel-startup": "^1.0.0",
-    "express": "^4.17.1",
-    "express-ejs-layouts": "^2.5.0",
-    "express-session": "^1.17.1",
-    "handsontable": "^8.2.0",
+    "express": "^4.19.2",
+    "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.0",
+    "handsontable": "^14.3.0",
     "mongo": "^0.1.0",
-    "mongodb": "^3.6.3",
-    "mongoose": "^5.10.15",
-    "nodemon": "^2.0.6"
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.2",
+    "nodemon": "^3.1.0"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.54",
-    "@electron-forge/maker-deb": "^6.0.0-beta.54",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.54",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
-    "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "electron": "^11.0.3"
+    "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-rpm": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "electron": "^30.0.1"
   },
   "config": {
     "forge": {
