--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongo": "^0.1.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
